src/miniJavaExprParser.py
# Generated from miniJavaExpr.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class miniJavaExprParser ( Parser ):

    grammarFileName = "miniJavaExpr.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'class'", "'{'", "'public'", "'static'", 
                     "'void'", "'main'", "'('", "'String'", "'['", "']'", 
                     "')'", "'}'", "'extends'", "';'", "','", "'return'", 
                     "'int'", "'boolean'", "'if'", "'else'", "'while'", 
                     "'System.out.println'", "'='", "'&&'", "'<'", "'+'", 
                     "'-'", "'*'", "'.'", "'length'", "'this'", "'new'", 
                     "'!'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "WS", "MULTILINE_COMMENT", 
                      "LINE_COMMENT", "BOOLEAN", "IDENTIFIER", "INT" ]

    RULE_goal = 0
    RULE_mainclass = 1
    RULE_classdeclaration = 2
    RULE_vardeclaration = 3
    RULE_methoddeclaration = 4
    RULE_mjtype = 5
    RULE_statement = 6
    RULE_expression = 7

    ruleNames =  [ "goal", "mainclass", "classdeclaration", "vardeclaration", 
                   "methoddeclaration", "mjtype", "statement", "expression" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    WS=34
    MULTILINE_COMMENT=35
    LINE_COMMENT=36
    BOOLEAN=37
    IDENTIFIER=38
    INT=39

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class GoalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mainclass(self):
            return self.getTypedRuleContext(miniJavaExprParser.MainclassContext,0)


        def classdeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniJavaExprParser.ClassdeclarationContext)
            else:
                return self.getTypedRuleContext(miniJavaExprParser.ClassdeclarationContext,i)


        def getRuleIndex(self):
            return miniJavaExprParser.RULE_goal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGoal" ):
                listener.enterGoal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGoal" ):
                listener.exitGoal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGoal" ):
                return visitor.visitGoal(self)
            else:
                return visitor.visitChildren(self)




    def goal(self):

        localctx = miniJavaExprParser.GoalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_goal)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 16
            self.mainclass()
            self.state = 20
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==miniJavaExprParser.T__0:
                self.state = 17
                self.classdeclaration()
                self.state = 22
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MainclassContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(miniJavaExprParser.IDENTIFIER)
            else:
                return self.getToken(miniJavaExprParser.IDENTIFIER, i)

        def statement(self):
            return self.getTypedRuleContext(miniJavaExprParser.StatementContext,0)


        def getRuleIndex(self):
            return miniJavaExprParser.RULE_mainclass

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMainclass" ):
                listener.enterMainclass(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMainclass" ):
                listener.exitMainclass(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMainclass" ):
                return visitor.visitMainclass(self)
            else:
                return visitor.visitChildren(self)




    def mainclass(self):

        localctx = miniJavaExprParser.MainclassContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_mainclass)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 23
            self.match(miniJavaExprParser.T__0)
            self.state = 24
            self.match(miniJavaExprParser.IDENTIFIER)
            self.state = 25
            self.match(miniJavaExprParser.T__1)
            self.state = 26
            self.match(miniJavaExprParser.T__2)
            self.state = 27
            self.match(miniJavaExprParser.T__3)
            self.state = 28
            self.match(miniJavaExprParser.T__4)
            self.state = 29
            self.match(miniJavaExprParser.T__5)
            self.state = 30
            self.match(miniJavaExprParser.T__6)
            self.state = 31
            self.match(miniJavaExprParser.T__7)
            self.state = 32
            self.match(miniJavaExprParser.T__8)
            self.state = 33
            self.match(miniJavaExprParser.T__9)
            self.state = 34
            self.match(miniJavaExprParser.IDENTIFIER)
            self.state = 35
            self.match(miniJavaExprParser.T__10)
            self.state = 36
            self.match(miniJavaExprParser.T__1)
            self.state = 37
            self.statement()
            self.state = 38
            self.match(miniJavaExprParser.T__11)
            self.state = 39
            self.match(miniJavaExprParser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassdeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(miniJavaExprParser.IDENTIFIER)
            else:
                return self.getToken(miniJavaExprParser.IDENTIFIER, i)

        def vardeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniJavaExprParser.VardeclarationContext)
            else:
                return self.getTypedRuleContext(miniJavaExprParser.VardeclarationContext,i)


        def methoddeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniJavaExprParser.MethoddeclarationContext)
            else:
                return self.getTypedRuleContext(miniJavaExprParser.MethoddeclarationContext,i)


        def getRuleIndex(self):
            return miniJavaExprParser.RULE_classdeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassdeclaration" ):
                listener.enterClassdeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassdeclaration" ):
                listener.exitClassdeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassdeclaration" ):
                return visitor.visitClassdeclaration(self)
            else:
                return visitor.visitChildren(self)




    def classdeclaration(self):

        localctx = miniJavaExprParser.ClassdeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_classdeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self.match(miniJavaExprParser.T__0)
            self.state = 42
            self.match(miniJavaExprParser.IDENTIFIER)
            self.state = 45
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==miniJavaExprParser.T__12:
                self.state = 43
                self.match(miniJavaExprParser.T__12)
                self.state = 44
                self.match(miniJavaExprParser.IDENTIFIER)


            self.state = 47
            self.match(miniJavaExprParser.T__1)
            self.state = 51
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << miniJavaExprParser.T__16) | (1 << miniJavaExprParser.T__17) | (1 << miniJavaExprParser.IDENTIFIER))) != 0):
                self.state = 48
                self.vardeclaration()
                self.state = 53
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 57
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==miniJavaExprParser.T__2:
                self.state = 54
                self.methoddeclaration()
                self.state = 59
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 60
            self.match(miniJavaExprParser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mjtype(self):
            return self.getTypedRuleContext(miniJavaExprParser.MjtypeContext,0)


        def IDENTIFIER(self):
            return self.getToken(miniJavaExprParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return miniJavaExprParser.RULE_vardeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVardeclaration" ):
                listener.enterVardeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVardeclaration" ):
                listener.exitVardeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardeclaration" ):
                return visitor.visitVardeclaration(self)
            else:
                return visitor.visitChildren(self)




    def vardeclaration(self):

        localctx = miniJavaExprParser.VardeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_vardeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.mjtype()
            self.state = 63
            self.match(miniJavaExprParser.IDENTIFIER)
            self.state = 64
            self.match(miniJavaExprParser.T__13)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethoddeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mjtype(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniJavaExprParser.MjtypeContext)
            else:
                return self.getTypedRuleContext(miniJavaExprParser.MjtypeContext,i)


        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(miniJavaExprParser.IDENTIFIER)
            else:
                return self.getToken(miniJavaExprParser.IDENTIFIER, i)

        def expression(self):
            return self.getTypedRuleContext(miniJavaExprParser.ExpressionContext,0)


        def vardeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniJavaExprParser.VardeclarationContext)
            else:
                return self.getTypedRuleContext(miniJavaExprParser.VardeclarationContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniJavaExprParser.StatementContext)
            else:
                return self.getTypedRuleContext(miniJavaExprParser.StatementContext,i)


        def getRuleIndex(self):
            return miniJavaExprParser.RULE_methoddeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethoddeclaration" ):
                listener.enterMethoddeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethoddeclaration" ):
                listener.exitMethoddeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethoddeclaration" ):
                return visitor.visitMethoddeclaration(self)
            else:
                return visitor.visitChildren(self)




    def methoddeclaration(self):

        localctx = miniJavaExprParser.MethoddeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_methoddeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(miniJavaExprParser.T__2)
            self.state = 67
            self.mjtype()
            self.state = 68
            self.match(miniJavaExprParser.IDENTIFIER)
            self.state = 69
            self.match(miniJavaExprParser.T__6)
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << miniJavaExprParser.T__16) | (1 << miniJavaExprParser.T__17) | (1 << miniJavaExprParser.IDENTIFIER))) != 0):
                self.state = 70
                self.mjtype()
                self.state = 71
                self.match(miniJavaExprParser.IDENTIFIER)
                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==miniJavaExprParser.T__14:
                    self.state = 72
                    self.match(miniJavaExprParser.T__14)
                    self.state = 73
                    self.mjtype()
                    self.state = 74
                    self.match(miniJavaExprParser.IDENTIFIER)
                    self.state = 80
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 83
            self.match(miniJavaExprParser.T__10)
            self.state = 84
            self.match(miniJavaExprParser.T__1)
            self.state = 88
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 85
                    self.vardeclaration() 
                self.state = 90
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << miniJavaExprParser.T__1) | (1 << miniJavaExprParser.T__18) | (1 << miniJavaExprParser.T__20) | (1 << miniJavaExprParser.T__21) | (1 << miniJavaExprParser.IDENTIFIER))) != 0):
                self.state = 91
                self.statement()
                self.state = 96
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 97
            self.match(miniJavaExprParser.T__15)
            self.state = 98
            self.expression(0)
            self.state = 99
            self.match(miniJavaExprParser.T__13)
            self.state = 100
            self.match(miniJavaExprParser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MjtypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return miniJavaExprParser.RULE_mjtype

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class IdentifiermjtypeContext(MjtypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a miniJavaExprParser.MjtypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IDENTIFIER(self):
            return self.getToken(miniJavaExprParser.IDENTIFIER, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentifiermjtype" ):
                listener.enterIdentifiermjtype(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentifiermjtype" ):
                listener.exitIdentifiermjtype(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentifiermjtype" ):
                return visitor.visitIdentifiermjtype(self)
            else:
                return visitor.visitChildren(self)


    class IntmjtypeContext(MjtypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a miniJavaExprParser.MjtypeContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIntmjtype" ):
                listener.enterIntmjtype(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIntmjtype" ):
                listener.exitIntmjtype(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIntmjtype" ):
                return visitor.visitIntmjtype(self)
            else:
                return visitor.visitChildren(self)


    class ArraymjtypeContext(MjtypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a miniJavaExprParser.MjtypeContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArraymjtype" ):
                listener.enterArraymjtype(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArraymjtype" ):
                listener.exitArraymjtype(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArraymjtype" ):
                return visitor.visitArraymjtype(self)
            else:
                return visitor.visitChildren(self)


    class BooleanmjtypeContext(MjtypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a miniJavaExprParser.MjtypeContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBooleanmjtype" ):
                listener.enterBooleanmjtype(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBooleanmjtype" ):
                listener.exitBooleanmjtype(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBooleanmjtype" ):
                return visitor.visitBooleanmjtype(self)
            else:
                return visitor.visitChildren(self)



    def mjtype(self):

        localctx = miniJavaExprParser.MjtypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_mjtype)
        try:
            self.state = 108
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                localctx = miniJavaExprParser.ArraymjtypeContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 102
                self.match(miniJavaExprParser.T__16)
                self.state = 103
                self.match(miniJavaExprParser.T__8)
                self.state = 104
                self.match(miniJavaExprParser.T__9)
                pass

            elif la_ == 2:
                localctx = miniJavaExprParser.BooleanmjtypeContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 105
                self.match(miniJavaExprParser.T__17)
                pass

            elif la_ == 3:
                localctx = miniJavaExprParser.IntmjtypeContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 106
                self.match(miniJavaExprParser.T__16)
                pass

            elif la_ == 4:
                localctx = miniJavaExprParser.IdentifiermjtypeContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 107
                self.match(miniJavaExprParser.IDENTIFIER)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return miniJavaExprParser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class WhileStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a miniJavaExprParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(miniJavaExprParser.ExpressionContext,0)

        def statement(self):
            return self.getTypedRuleContext(miniJavaExprParser.StatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStatement" ):
                listener.enterWhileStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStatement" ):
                listener.exitWhileStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStatement" ):
                return visitor.visitWhileStatement(self)
            else:
                return visitor.visitChildren(self)


    class PrintStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a miniJavaExprParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(miniJavaExprParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintStatement" ):
                listener.enterPrintStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintStatement" ):
                listener.exitPrintStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintStatement" ):
                return visitor.visitPrintStatement(self)
            else:
                return visitor.visitChildren(self)


    class BlockStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a miniJavaExprParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniJavaExprParser.StatementContext)
            else:
                return self.getTypedRuleContext(miniJavaExprParser.StatementContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlockStatement" ):
                listener.enterBlockStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlockStatement" ):
                listener.exitBlockStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockStatement" ):
                return visitor.visitBlockStatement(self)
            else:
                return visitor.visitChildren(self)


    class ArrayAssignStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a miniJavaExprParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IDENTIFIER(self):
            return self.getToken(miniJavaExprParser.IDENTIFIER, 0)
        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniJavaExprParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(miniJavaExprParser.ExpressionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrayAssignStatement" ):
                listener.enterArrayAssignStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrayAssignStatement" ):
                listener.exitArrayAssignStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayAssignStatement" ):
                return visitor.visitArrayAssignStatement(self)
            else:
                return visitor.visitChildren(self)


    class AssignStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a miniJavaExprParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IDENTIFIER(self):
            return self.getToken(miniJavaExprParser.IDENTIFIER, 0)
        def expression(self):
            return self.getTypedRuleContext(miniJavaExprParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignStatement" ):
                listener.enterAssignStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignStatement" ):
                listener.exitAssignStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignStatement" ):
                return visitor.visitAssignStatement(self)
            else:
                return visitor.visitChildren(self)


    class IfStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a miniJavaExprParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(miniJavaExprParser.ExpressionContext,0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniJavaExprParser.StatementContext)
            else:
                return self.getTypedRuleContext(miniJavaExprParser.StatementContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStatement" ):
                return visitor.visitIfStatement(self)
            else:
                return visitor.visitChildren(self)



    def statement(self):

        localctx = miniJavaExprParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 151
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                localctx = miniJavaExprParser.BlockStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 110
                self.match(miniJavaExprParser.T__1)
                self.state = 114
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << miniJavaExprParser.T__1) | (1 << miniJavaExprParser.T__18) | (1 << miniJavaExprParser.T__20) | (1 << miniJavaExprParser.T__21) | (1 << miniJavaExprParser.IDENTIFIER))) != 0):
                    self.state = 111
                    self.statement()
                    self.state = 116
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 117
                self.match(miniJavaExprParser.T__11)
                pass

            elif la_ == 2:
                localctx = miniJavaExprParser.IfStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 118
                self.match(miniJavaExprParser.T__18)
                self.state = 119
                self.match(miniJavaExprParser.T__6)
                self.state = 120
                self.expression(0)
                self.state = 121
                self.match(miniJavaExprParser.T__10)
                self.state = 122
                self.statement()
                self.state = 123
                self.match(miniJavaExprParser.T__19)
                self.state = 124
                self.statement()
                pass

            elif la_ == 3:
                localctx = miniJavaExprParser.WhileStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 126
                self.match(miniJavaExprParser.T__20)
                self.state = 127
                self.match(miniJavaExprParser.T__6)
                self.state = 128
                self.expression(0)
                self.state = 129
                self.match(miniJavaExprParser.T__10)
                self.state = 130
                self.statement()
                pass

            elif la_ == 4:
                localctx = miniJavaExprParser.PrintStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 132
                self.match(miniJavaExprParser.T__21)
                self.state = 133
                self.match(miniJavaExprParser.T__6)
                self.state = 134
                self.expression(0)
                self.state = 135
                self.match(miniJavaExprParser.T__10)
                self.state = 136
                self.match(miniJavaExprParser.T__13)
                pass

            elif la_ == 5:
                localctx = miniJavaExprParser.AssignStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 138
                self.match(miniJavaExprParser.IDENTIFIER)
                self.state = 139
                self.match(miniJavaExprParser.T__22)
                self.state = 140
                self.expression(0)
                self.state = 141
                self.match(miniJavaExprParser.T__13)
                pass

            elif la_ == 6:
                localctx = miniJavaExprParser.ArrayAssignStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 143
                self.match(miniJavaExprParser.IDENTIFIER)
                self.state = 144
                self.match(miniJavaExprParser.T__8)
                self.state = 145
                self.expression(0)
                self.state = 146
                self.match(miniJavaExprParser.T__9)
                self.state = 147
                self.match(miniJavaExprParser.T__22)
                self.state = 148
                self.expression(0)
                self.state = 149
                self.match(miniJavaExprParser.T__13)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return miniJavaExprParser.RULE_expression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class ConstIntExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a miniJavaExprParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(miniJavaExprParser.INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstIntExpr" ):
                listener.enterConstIntExpr(self)
